CHANGES IN FLTK 1.3.4-2-ts ( ext-3 )    UPDATED: Jan 12 2018

Some changes for improvements

	- Many changes in fl_ask.
	- Changed each button color configuration using dual parameters.

CHANGES IN FLTK 1.3.4-2-ts ( ext-2 )    UPDATED: Jan 10 2018

Some changes for improvements

    - FLTK_EXT_VERSION in Enumeration.H for checking customized version.
	- fl_message_widow_color_ for changing fl_ask widget window backgrou
	  nd color when it creating.
	- fl_message_button_color_[3] array for chaning fl_ask widget window
	  buttons background color when it creating.

CHANGES IN FLTK 1.3.4-2-ts              UPDATED: Nov 04 2017

Bug fixes and other improvements

    - Merged fltk-1.3.4-1-ts and 1.3.4-2.
    - libPNG updated to latest release of 1.6.34

	- Changed fl_ask all window buttons also following fl_message_font
	  and size.

CHANGES IN FLTK 1.3.4-2					RELEASED: Sep 19 2017

Bug fixes and other improvements

    - Add support for Mac OS 10.13 'High Sierra'

	Note: this is a source tar file update useful to support 
        Mac OS 10.13 'High Sierra' (and all Mac OS versions since 10.3).
        Other platforms (MSWindows, Linux, Unix) are unconcerned
        by this update.

CHANGES IN FLTK 1.3.4-1-ts				UPDATED: Mar 06 2017

	- Added "flat" scheme for Windows 10 style flat theme.
	- Fixed Fl_Text_Display draws always gray box between of scrolls.
	- Improbed Fl_Spinner has some more methods above ABI 10303.

CHANGES IN FLTK 1.3.4-1-ts				UPDATED: Nov 24 2016

	- Applied some issues from FLTK 1.3.3.(2)-ts.
	

CHANGES IN FLTK 1.3.4-1					RELEASED: Nov 15 2016

Bug fixes and other improvements

	- Fix Windows IDE solutions VisualC2008 and VisualC2010 to
	  build properly if the FLTK source directory is located
	  in a path that contains spaces.
	
	Note: this is a source tar file update that is only necessary
	if you build one of the above mentioned Visual Studio IDE
	solutions in a path with spaces. Nothing else changed, no
	documentation updates.

