@@ -31,6 +31,9 @@
 void Fl_Slider::_Fl_Slider() {
   slider_size_ = 0;
   slider_ = 0; // FL_UP_BOX;
+#ifdef FLTK_EXT_VERSION
+  if(Fl::is_scheme("flat"))slider_ = 1;
+#endif /// of FLTK_EXT_VERSION
 }
 
 /**
@@ -152,6 +155,9 @@ void Fl_Slider::draw(int X, int Y, int W, int H) {
 
   Fl_Boxtype box1 = slider();
   if (!box1) {box1 = (Fl_Boxtype)(box()&-2); if (!box1) box1 = FL_UP_BOX;}
+#ifdef FLTK_EXT_VERSION
+  if (Fl::is_scheme("flat")) box1 = FL_DOWN_BOX;
+#endif
   if (type() == FL_VERT_NICE_SLIDER) {
     draw_box(box1, xsl, ysl, wsl, hsl, FL_GRAY);
     int d = (hsl-4)/2;
