@@ -2,7 +2,8 @@ CHANGES IN FLTK 1.3.4-2-ts ( ext-3 )    UPDATED: Jan 12 2018
 
 Some changes for improvements
 
-	- Many changes in fl_ask.
+    - Many fixes for "flat" scheme.
+    - Many changes in fl_ask.
 	- Changed each button color configuration using dual parameters.
 
 CHANGES IN FLTK 1.3.4-2-ts ( ext-2 )    UPDATED: Jan 10 2018
